# LinearRegression

./: CMakeLists.txt  README.md
header/: LinearRegression.h
source/: gradient.cpp  linear_regression_prediction.cpp  main.cpp  mean.cpp  savedata.cpp  two_dimensional_allocation.cpp  y_intercept.cpp
